# libndkcam

./: README.md  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: crossbuild.yml
libndkcam/: ndkcam.h
